tests/security/var_dump/output.txt
ERROR: TaintedData - input.hack:1:10 - Data from a URL query string found its way to an HTML tag using path $_GET --array-fetch--> $_GET['name'] (input.hack:1:10) ----> call to var_dump (input.hack:1:10) ----> var_dump#1 (input.hack:1:10)